llullParser.py
# Generated from llull.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class llullParser ( Parser ):

    grammarFileName = "llull.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'if'", "'else if'", "'else'", 
                     "'while'", "'do'", "'for'", "';'", "'++'", "'--'", 
                     "'read'", "'write'", "'array'", "'get'", "'set'", "'+'", 
                     "'-'", "'*'", "'/'", "'^'", "'%'", "'('", "')'", "'{'", 
                     "'}'", "'='", "'=='", "'<>'", "'<'", "'>'", "'<='", 
                     "'>='", "'&&'", "'||'", "'void'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "MES", "MENYS", "MULT", "DIV", "POW", "MOD", "PARL", 
                      "PARR", "BRACKL", "BRACKR", "ASSIG", "EQ", "NOTEQ", 
                      "LESS", "GREATER", "LESSEQ", "GREATEREQ", "AND", "OR", 
                      "RET", "ALPH", "INT", "FLOAT", "WS", "NEWLINE", "COMMENT", 
                      "STRING" ]

    RULE_root = 0
    RULE_accio = 1
    RULE_stat = 2
    RULE_expr = 3
    RULE_if_else = 4
    RULE_while_loop = 5
    RULE_do_while_loop = 6
    RULE_for_loop = 7
    RULE_assig = 8
    RULE_assig_operator = 9
    RULE_assig_double = 10
    RULE_read = 11
    RULE_write = 12
    RULE_create_array = 13
    RULE_get_array = 14
    RULE_set_array = 15
    RULE_invocacio = 16
    RULE_ids = 17

    ruleNames =  [ "root", "accio", "stat", "expr", "if_else", "while_loop", 
                   "do_while_loop", "for_loop", "assig", "assig_operator", 
                   "assig_double", "read", "write", "create_array", "get_array", 
                   "set_array", "invocacio", "ids" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    MES=16
    MENYS=17
    MULT=18
    DIV=19
    POW=20
    MOD=21
    PARL=22
    PARR=23
    BRACKL=24
    BRACKR=25
    ASSIG=26
    EQ=27
    NOTEQ=28
    LESS=29
    GREATER=30
    LESSEQ=31
    GREATEREQ=32
    AND=33
    OR=34
    RET=35
    ALPH=36
    INT=37
    FLOAT=38
    WS=39
    NEWLINE=40
    COMMENT=41
    STRING=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(llullParser.EOF, 0)

        def accio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.AccioContext)
            else:
                return self.getTypedRuleContext(llullParser.AccioContext,i)


        def getRuleIndex(self):
            return llullParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = llullParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 36
                self.accio()
                self.state = 39 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==llullParser.RET):
                    break

            self.state = 41
            self.match(llullParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AccioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RET(self):
            return self.getToken(llullParser.RET, 0)

        def ids(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.IdsContext)
            else:
                return self.getTypedRuleContext(llullParser.IdsContext,i)


        def PARL(self):
            return self.getToken(llullParser.PARL, 0)

        def PARR(self):
            return self.getToken(llullParser.PARR, 0)

        def BRACKL(self):
            return self.getToken(llullParser.BRACKL, 0)

        def BRACKR(self):
            return self.getToken(llullParser.BRACKR, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.StatContext)
            else:
                return self.getTypedRuleContext(llullParser.StatContext,i)


        def getRuleIndex(self):
            return llullParser.RULE_accio

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAccio" ):
                return visitor.visitAccio(self)
            else:
                return visitor.visitChildren(self)




    def accio(self):

        localctx = llullParser.AccioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_accio)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(llullParser.RET)
            self.state = 44
            self.ids()
            self.state = 45
            self.match(llullParser.PARL)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==llullParser.ALPH:
                self.state = 51
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 46
                        self.ids()
                        self.state = 47
                        self.match(llullParser.T__0) 
                    self.state = 53
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

                self.state = 54
                self.ids()


            self.state = 57
            self.match(llullParser.PARR)
            self.state = 58
            self.match(llullParser.BRACKL)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << llullParser.T__1) | (1 << llullParser.T__4) | (1 << llullParser.T__5) | (1 << llullParser.T__6) | (1 << llullParser.T__10) | (1 << llullParser.T__11) | (1 << llullParser.T__12) | (1 << llullParser.T__13) | (1 << llullParser.T__14) | (1 << llullParser.ALPH))) != 0):
                self.state = 59
                self.stat()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self.match(llullParser.BRACKR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_else(self):
            return self.getTypedRuleContext(llullParser.If_elseContext,0)


        def while_loop(self):
            return self.getTypedRuleContext(llullParser.While_loopContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(llullParser.For_loopContext,0)


        def do_while_loop(self):
            return self.getTypedRuleContext(llullParser.Do_while_loopContext,0)


        def read(self):
            return self.getTypedRuleContext(llullParser.ReadContext,0)


        def write(self):
            return self.getTypedRuleContext(llullParser.WriteContext,0)


        def assig(self):
            return self.getTypedRuleContext(llullParser.AssigContext,0)


        def assig_operator(self):
            return self.getTypedRuleContext(llullParser.Assig_operatorContext,0)


        def assig_double(self):
            return self.getTypedRuleContext(llullParser.Assig_doubleContext,0)


        def invocacio(self):
            return self.getTypedRuleContext(llullParser.InvocacioContext,0)


        def create_array(self):
            return self.getTypedRuleContext(llullParser.Create_arrayContext,0)


        def get_array(self):
            return self.getTypedRuleContext(llullParser.Get_arrayContext,0)


        def set_array(self):
            return self.getTypedRuleContext(llullParser.Set_arrayContext,0)


        def getRuleIndex(self):
            return llullParser.RULE_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = llullParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stat)
        try:
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.if_else()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.while_loop()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.for_loop()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 70
                self.do_while_loop()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 71
                self.read()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 72
                self.write()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 73
                self.assig()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 74
                self.assig_operator()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 75
                self.assig_double()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 76
                self.invocacio()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 77
                self.create_array()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 78
                self.get_array()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 79
                self.set_array()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARL(self):
            return self.getToken(llullParser.PARL, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.ExprContext)
            else:
                return self.getTypedRuleContext(llullParser.ExprContext,i)


        def PARR(self):
            return self.getToken(llullParser.PARR, 0)

        def MES(self):
            return self.getToken(llullParser.MES, 0)

        def MENYS(self):
            return self.getToken(llullParser.MENYS, 0)

        def INT(self):
            return self.getToken(llullParser.INT, 0)

        def FLOAT(self):
            return self.getToken(llullParser.FLOAT, 0)

        def ids(self):
            return self.getTypedRuleContext(llullParser.IdsContext,0)


        def STRING(self):
            return self.getToken(llullParser.STRING, 0)

        def get_array(self):
            return self.getTypedRuleContext(llullParser.Get_arrayContext,0)


        def POW(self):
            return self.getToken(llullParser.POW, 0)

        def MULT(self):
            return self.getToken(llullParser.MULT, 0)

        def DIV(self):
            return self.getToken(llullParser.DIV, 0)

        def MOD(self):
            return self.getToken(llullParser.MOD, 0)

        def EQ(self):
            return self.getToken(llullParser.EQ, 0)

        def NOTEQ(self):
            return self.getToken(llullParser.NOTEQ, 0)

        def LESS(self):
            return self.getToken(llullParser.LESS, 0)

        def GREATER(self):
            return self.getToken(llullParser.GREATER, 0)

        def LESSEQ(self):
            return self.getToken(llullParser.LESSEQ, 0)

        def GREATEREQ(self):
            return self.getToken(llullParser.GREATEREQ, 0)

        def AND(self):
            return self.getToken(llullParser.AND, 0)

        def OR(self):
            return self.getToken(llullParser.OR, 0)

        def getRuleIndex(self):
            return llullParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = llullParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [llullParser.PARL]:
                self.state = 83
                self.match(llullParser.PARL)
                self.state = 84
                self.expr(0)
                self.state = 85
                self.match(llullParser.PARR)
                pass
            elif token in [llullParser.MES, llullParser.MENYS]:
                self.state = 87
                _la = self._input.LA(1)
                if not(_la==llullParser.MES or _la==llullParser.MENYS):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 88
                self.expr(10)
                pass
            elif token in [llullParser.INT]:
                self.state = 89
                self.match(llullParser.INT)
                pass
            elif token in [llullParser.FLOAT]:
                self.state = 90
                self.match(llullParser.FLOAT)
                pass
            elif token in [llullParser.ALPH]:
                self.state = 91
                self.ids()
                pass
            elif token in [llullParser.STRING]:
                self.state = 92
                self.match(llullParser.STRING)
                pass
            elif token in [llullParser.T__13]:
                self.state = 93
                self.get_array()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 116
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 114
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = llullParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 96
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 97
                        self.match(llullParser.POW)
                        self.state = 98
                        self.expr(13)
                        pass

                    elif la_ == 2:
                        localctx = llullParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 99
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 100
                        _la = self._input.LA(1)
                        if not(_la==llullParser.MULT or _la==llullParser.DIV):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 101
                        self.expr(12)
                        pass

                    elif la_ == 3:
                        localctx = llullParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 102
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 103
                        _la = self._input.LA(1)
                        if not(_la==llullParser.MES or _la==llullParser.MENYS):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 104
                        self.expr(10)
                        pass

                    elif la_ == 4:
                        localctx = llullParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 105
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 106
                        self.match(llullParser.MOD)
                        self.state = 107
                        self.expr(9)
                        pass

                    elif la_ == 5:
                        localctx = llullParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 108
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 109
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << llullParser.EQ) | (1 << llullParser.NOTEQ) | (1 << llullParser.LESS) | (1 << llullParser.GREATER) | (1 << llullParser.LESSEQ) | (1 << llullParser.GREATEREQ))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 110
                        self.expr(8)
                        pass

                    elif la_ == 6:
                        localctx = llullParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 111
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 112
                        _la = self._input.LA(1)
                        if not(_la==llullParser.AND or _la==llullParser.OR):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 113
                        self.expr(7)
                        pass

             
                self.state = 118
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class If_elseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARL(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.PARL)
            else:
                return self.getToken(llullParser.PARL, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.ExprContext)
            else:
                return self.getTypedRuleContext(llullParser.ExprContext,i)


        def PARR(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.PARR)
            else:
                return self.getToken(llullParser.PARR, i)

        def BRACKL(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.BRACKL)
            else:
                return self.getToken(llullParser.BRACKL, i)

        def BRACKR(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.BRACKR)
            else:
                return self.getToken(llullParser.BRACKR, i)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.StatContext)
            else:
                return self.getTypedRuleContext(llullParser.StatContext,i)


        def getRuleIndex(self):
            return llullParser.RULE_if_else

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_else" ):
                return visitor.visitIf_else(self)
            else:
                return visitor.visitChildren(self)




    def if_else(self):

        localctx = llullParser.If_elseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_if_else)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(llullParser.T__1)
            self.state = 120
            self.match(llullParser.PARL)
            self.state = 121
            self.expr(0)
            self.state = 122
            self.match(llullParser.PARR)
            self.state = 123
            self.match(llullParser.BRACKL)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << llullParser.T__1) | (1 << llullParser.T__4) | (1 << llullParser.T__5) | (1 << llullParser.T__6) | (1 << llullParser.T__10) | (1 << llullParser.T__11) | (1 << llullParser.T__12) | (1 << llullParser.T__13) | (1 << llullParser.T__14) | (1 << llullParser.ALPH))) != 0):
                self.state = 124
                self.stat()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self.match(llullParser.BRACKR)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==llullParser.T__2:
                self.state = 131
                self.match(llullParser.T__2)
                self.state = 132
                self.match(llullParser.PARL)
                self.state = 133
                self.expr(0)
                self.state = 134
                self.match(llullParser.PARR)
                self.state = 135
                self.match(llullParser.BRACKL)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << llullParser.T__1) | (1 << llullParser.T__4) | (1 << llullParser.T__5) | (1 << llullParser.T__6) | (1 << llullParser.T__10) | (1 << llullParser.T__11) | (1 << llullParser.T__12) | (1 << llullParser.T__13) | (1 << llullParser.T__14) | (1 << llullParser.ALPH))) != 0):
                    self.state = 136
                    self.stat()
                    self.state = 141
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 142
                self.match(llullParser.BRACKR)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==llullParser.T__3:
                self.state = 149
                self.match(llullParser.T__3)
                self.state = 150
                self.match(llullParser.BRACKL)
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << llullParser.T__1) | (1 << llullParser.T__4) | (1 << llullParser.T__5) | (1 << llullParser.T__6) | (1 << llullParser.T__10) | (1 << llullParser.T__11) | (1 << llullParser.T__12) | (1 << llullParser.T__13) | (1 << llullParser.T__14) | (1 << llullParser.ALPH))) != 0):
                    self.state = 151
                    self.stat()
                    self.state = 156
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 157
                self.match(llullParser.BRACKR)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARL(self):
            return self.getToken(llullParser.PARL, 0)

        def expr(self):
            return self.getTypedRuleContext(llullParser.ExprContext,0)


        def PARR(self):
            return self.getToken(llullParser.PARR, 0)

        def BRACKL(self):
            return self.getToken(llullParser.BRACKL, 0)

        def BRACKR(self):
            return self.getToken(llullParser.BRACKR, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.StatContext)
            else:
                return self.getTypedRuleContext(llullParser.StatContext,i)


        def getRuleIndex(self):
            return llullParser.RULE_while_loop

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_loop" ):
                return visitor.visitWhile_loop(self)
            else:
                return visitor.visitChildren(self)




    def while_loop(self):

        localctx = llullParser.While_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_while_loop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(llullParser.T__4)
            self.state = 161
            self.match(llullParser.PARL)
            self.state = 162
            self.expr(0)
            self.state = 163
            self.match(llullParser.PARR)
            self.state = 164
            self.match(llullParser.BRACKL)
            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << llullParser.T__1) | (1 << llullParser.T__4) | (1 << llullParser.T__5) | (1 << llullParser.T__6) | (1 << llullParser.T__10) | (1 << llullParser.T__11) | (1 << llullParser.T__12) | (1 << llullParser.T__13) | (1 << llullParser.T__14) | (1 << llullParser.ALPH))) != 0):
                self.state = 165
                self.stat()
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 171
            self.match(llullParser.BRACKR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Do_while_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BRACKL(self):
            return self.getToken(llullParser.BRACKL, 0)

        def BRACKR(self):
            return self.getToken(llullParser.BRACKR, 0)

        def PARL(self):
            return self.getToken(llullParser.PARL, 0)

        def expr(self):
            return self.getTypedRuleContext(llullParser.ExprContext,0)


        def PARR(self):
            return self.getToken(llullParser.PARR, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.StatContext)
            else:
                return self.getTypedRuleContext(llullParser.StatContext,i)


        def getRuleIndex(self):
            return llullParser.RULE_do_while_loop

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDo_while_loop" ):
                return visitor.visitDo_while_loop(self)
            else:
                return visitor.visitChildren(self)




    def do_while_loop(self):

        localctx = llullParser.Do_while_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_do_while_loop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(llullParser.T__5)
            self.state = 174
            self.match(llullParser.BRACKL)
            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << llullParser.T__1) | (1 << llullParser.T__4) | (1 << llullParser.T__5) | (1 << llullParser.T__6) | (1 << llullParser.T__10) | (1 << llullParser.T__11) | (1 << llullParser.T__12) | (1 << llullParser.T__13) | (1 << llullParser.T__14) | (1 << llullParser.ALPH))) != 0):
                self.state = 175
                self.stat()
                self.state = 180
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 181
            self.match(llullParser.BRACKR)
            self.state = 182
            self.match(llullParser.T__4)
            self.state = 183
            self.match(llullParser.PARL)
            self.state = 184
            self.expr(0)
            self.state = 185
            self.match(llullParser.PARR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARL(self):
            return self.getToken(llullParser.PARL, 0)

        def assig(self):
            return self.getTypedRuleContext(llullParser.AssigContext,0)


        def expr(self):
            return self.getTypedRuleContext(llullParser.ExprContext,0)


        def PARR(self):
            return self.getToken(llullParser.PARR, 0)

        def BRACKL(self):
            return self.getToken(llullParser.BRACKL, 0)

        def BRACKR(self):
            return self.getToken(llullParser.BRACKR, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.StatContext)
            else:
                return self.getTypedRuleContext(llullParser.StatContext,i)


        def getRuleIndex(self):
            return llullParser.RULE_for_loop

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_loop" ):
                return visitor.visitFor_loop(self)
            else:
                return visitor.visitChildren(self)




    def for_loop(self):
